# Profiling-RTIC

./: Cargo.toml  README.md
.cargo/: config.toml
profiled-rtic-monotonics/: Cargo.toml
profiled-rtic-monotonics/src/: lib.rs  systick.rs
src/: event_queue.rs  main.rs  task_semaphore.rs  time.rs
